# aurora-ltfs

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  Makefile.am  README.md  altfs.pc.in  build.sh  configure.ac  replace_copyright.pl  setup-labels.sh
.devcontainer/rocky9/: Dockerfile  devcontainer.json
.devcontainer/ubuntu2404/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hba_report.md
conf/: .gitignore  Makefile.am  README.md  altfs-log.conf  altfs.conf.in  altfs.conf.local  altfs.service  altfslog
contrib/ut-incindex/: README.md  ut-basic.sh  utils.sh
docs/: AI_POLICY.md  CODING_STYLE.md  GOVERNANCE.md  README.md
examples/: README.md
init.d/: Makefile.am  altfs
man/: Makefile.am  altfs.8  altfs_ordered_copy.1  altfsck.8  altfsindextool.8  mkaltfs.8
man/sgml/: altfs.sgml  altfs_ordered_copy.sgml  altfsck.sgml  altfsindextool.sgml  mkaltfs.sgml
messages/: Makefile.am  README
messages/libltfs/: root.txt
src/: .gitignore  Makefile.am  main.c
src/cmd/: .gitignore
src/cmd/altfs/: Makefile.am  altfs.c  ltfs_fuse.h
src/cmd/altfs_ordered_copy/: Makefile.am
src/cmd/altfsck/: .gitignore  Makefile.am  altfsck.c
src/cmd/altfsindextool/: .gitignore  Makefile.am  altfsindextool.c
src/cmd/mkaltfs/: .gitignore  Makefile.am  mkaltfs.c
src/iosched/: Makefile.am  fcfs.c
src/kmi/: Makefile.am
src/libltfs/: LtfsSnmpTrapDef.txt  Makefile.am  config_file.c  iosched.c  kmi.c  ltfs.c  ltfs.h  ltfs_fsops.c  ltfs_internal.c  ltfs_internal.h  ltfslogging.c  xattr.c  xml_libltfs.h  xml_reader_libltfs.c
src/tape_drivers/freebsd/cam/: Makefile.am  cam_cmn.c  cam_tc.c
src/tape_drivers/generic/file/: Makefile.am  filedebug_tc.c
src/tape_drivers/generic/itdtimg/: Makefile.am  itdtimg_tc.c
src/tape_drivers/linux/lin_tape/: Makefile.am  lin_tape_ibmtape.c
src/tape_drivers/linux/sg/: Makefile.am  sg_tape.c
src/tape_drivers/netbsd/scsipi-ibmtape/: Makefile.am  scsipi_ibmtape.c
src/tape_drivers/osx/iokit/: Makefile.am  iokit_tape.c
src/utils/: .gitignore  Makefile.am  ltfsck.c  ltfsindextool.c  mkltfs.c
tests/incindex-recovery/: README.md  run_all.sh
tests/incindex-recovery/scenario1/: .gitignore  clean.sh  gen.sh  run.sh
